--- a/TODO
+++ b/TODO
@@ -25,3 +25,13 @@ ssl_requirement:
 
 results:
 - Jeff's notes
+
+Optimizations:
+- add direct has many association between team and brand result (now it goes through brand)
+
+- Querying brand results
+  - add result_created_at field to BrandResult to hold the result's created_at timestap;
+  - when linking brands with results, create the BrandResult explicitly and set the result_created_at timestamp 
+
+- Linking brand results
+  - When adding a term to a query, do not fetch all brand results and map them; add a delayed method and fetch in batches
