Manually merged optimizations branch with: optimizations to brand results, updating past due subscriptions, requiring account holder to manage brands and users, payment history from BrainTree shown in account, comp/uncomp account.

--- a/TODO
+++ b/TODO
@@ -1,23 +1,23 @@
 Comp account:
-- Account#comp!
-- if BT subscription exists, update it with :price => 0 (or remove it)
-- set 'comp' flag to true
++ Account#comp!
++ if BT subscription exists, update it with :price => 0 (or remove it)
++ set 'comp' flag to true
 
 Uncomp account:
-- Account#uncomp!
-- if BT subscription exists, update it with price corresponding to the plan
-- set 'comp' flag to false
++ Account#uncomp!
++ if BT subscription exists, update it with price corresponding to the plan
++ set 'comp' flag to false
 
 Check for past-due subscriptions:
 - Account.update_past_due_subscriptions!
-  - query BT for subscriptions that are past-due
-  - update accounts with PastDue status
-  - schedule using Whenever to run every day.
-  - update next billing date
-  - send email with failed subscriptions 
+  + query BT for subscriptions that are past-due
+  + update accounts with PastDue status
+  + schedule using Whenever to run every day.
+  + update next billing date
+  + send email with failed subscriptions 
 
 Transactions:
-- show subscription charges history
++ show subscription charges history
 
 ssl_requirement:
 - login
